# Canadian-Tire-Clearance-Web-App

APP/: .env.sample  .gitignore  pyproject.toml
