[tool.poetry]
name = "CTCA"
version = "0.1.0"

description = "Canadian Tire Clearance App"
authors = ["Kristian Rafuse <kristian.rafuse@gmail.com>, Greg Hatt <ghattjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.7"

[tool.poetry.scripts]
my-script = "app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
